--- a/gateway-doc/src/main/resources/assets/toc.js.vm
+++ b/gateway-doc/src/main/resources/assets/toc.js.vm
@@ -25,7 +25,7 @@ if (toctitle != null) {
           linkHref = indexLinkElement.getAttribute("href");
           link.setAttribute("href", linkHref);
         } else {
-          link.setAttribute("href", "index.html");
+          link.setAttribute("href", "../index.html");
         }
         link.innerHTML = "<div class='goback'></div> Back to index";
         var block = document.createElement("div");
